src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>SAL_Owner_Team__c</fullName>
        <label>SAL Owner Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beast Coast</fullName>
                </value>
                <value>
                    <fullName>SEC</fullName>
                </value>
                <value>
                    <fullName>The Green Flash</fullName>
                </value>
                <value>
                    <fullName>Peak Performers</fullName>
                </value>
                <value>
                    <fullName>Closers Club</fullName>
                </value>
                <value>
                    <fullName>The Green Monsters</fullName>
                </value>
                <value>
                    <fullName>Bangers n Cash</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Global Accounts International</fullName>
                </value>
                <value>
                    <fullName>Global Accounts US</fullName>
                </value>
                <value>
                    <fullName>Spartans</fullName>
                </value>
                <value>
                    <fullName>The Foundation</fullName>
                </value>
                <value>
                    <fullName>The Pack</fullName>
                </value>
                <value>
                    <fullName>Marketing Inbound</fullName>
                </value>
                <value>
                    <fullName>Xccelerators</fullName>
                </value>
                <value>
                    <fullName>Candy Time</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Recruiting</fullName>
                </value>
                <value>
                    <fullName>Wheelers and Dealers</fullName>
                </value>
                <value>
                    <fullName>Aussie Posse</fullName>
                </value>
                <value>
                    <fullName>The Minutemen</fullName>
                </value>
                <value>
                    <fullName>Intimidators</fullName>
                </value>
                <value>
                    <fullName>Gravy Train</fullName>
                </value>
                <value>
                    <fullName>VManifest Destiny</fullName>
                </value>
                <value>
                    <fullName>The Ringers</fullName>
                </value>
                <value>
                    <fullName>Virtual Empire</fullName>
                </value>
                <value>
                    <fullName>Green Street Hooligans</fullName>
                </value>
                <value>
                    <fullName>Mount Crushmore</fullName>
                </value>
                <value>
                    <fullName>Pipeline Pitbulls</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAL_Owner_Velocity_Region__c</fullName>
        <label>SAL Owner Velocity Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Reanimation_Date__c</fullName>
        <label>Task Reanimation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Temp_Audit__c</fullName>
        <label>Temp-Audit</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Clean__c</fullName>
        <formula>IF(NOT(ISBLANK(ContactId)),Contact.Title_Clean__c,IF(NOT(ISBLANK(LeadId)),Lead.Title_Clean__c,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title (Clean)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tradeshow_Buckets__c</fullName>
        <formula>IF(AND(LEFT(Campaign.Name, 3)= &quot;TSE&quot;,CONTAINS(&quot;swap&quot;, Campaign.Name), CONTAINS(&quot;VMWorld&quot;, Campaign.Name)),&quot;VMWorld- Swap&quot;, IF(AND(LEFT(Campaign.Name, 3)= &quot;TSE&quot;,CONTAINS(&quot;swap&quot;, Campaign.Name), CONTAINS(&quot;VMUG&quot;, Campaign.Name)),&quot;VMUG- Swap&quot;,IF(AND(LEFT(Campaign.Name, 3)= &quot;TSE&quot;,NOT(CONTAINS(&quot;swap&quot;,Campaign.Name)),NOT(CONTAINS(&quot;VIP&quot;,Campaign.Name)),NOT(CONTAINS(&quot;MEETING&quot;,Campaign.Name)), CONTAINS(&quot;VMUG&quot;, Campaign.Name)),&quot;VMUG- General&quot;, IF(AND(LEFT(Campaign.Name, 3)= &quot;TSE&quot;,NOT(CONTAINS(&quot;swap&quot;,Campaign.Name)),NOT(CONTAINS(&quot;VIP&quot;,Campaign.Name)),NOT(CONTAINS(&quot;MEETING&quot;,Campaign.Name)), CONTAINS(&quot;VMWorld&quot;, Campaign.Name)),&quot;VMWorld- General&quot;, IF(AND(LEFT(Campaign.Name, 3)= &quot;TSE&quot;,CONTAINS(&quot;VIP&quot;,Campaign.Name), CONTAINS(&quot;VMWorld&quot;, Campaign.Name)),&quot;VMWorld- VIP&quot;,IF(AND(LEFT(Campaign.Name, 3)= &quot;TSE&quot;,CONTAINS(&quot;VIP&quot;,Campaign.Name), CONTAINS(&quot;VMUG&quot;, Campaign.Name)),&quot;VMUG- VIP&quot;, IF(AND(LEFT(Campaign.Name, 3)= &quot;TSE&quot;,CONTAINS(&quot;meeting&quot;,Campaign.Name), CONTAINS(&quot;VMWorld&quot;, Campaign.Name)),&quot;VMWorld- Exec Meeting&quot;,NULL)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tradeshow Buckets</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Workflow_Rules__c</fullName>
        <label>Trigger Workflow Rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMT_Score_On_Create__c</fullName>
        <description>Sync from lead/contact for all responses when created</description>
        <inlineHelpText>Sync from lead/contact for all responses when created</inlineHelpText>
        <label>VMT Score (On Create)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VMT_Score_On_Update__c</fullName>
        <description>Syncs from lead/contact for all responses on create and syncs on update for active resposnes</description>
        <inlineHelpText>Syncs from lead/contact for all responses on create and syncs on update for active resposnes</inlineHelpText>
        <label>VMT Score (On Update)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bizible2__Bizible_Touchpoint_Date__c</fullName>
        <description>Custom date used to set the Touchpoint Date for Bizible Attribution. If blank, Campaign Member Created Date or First Responded Date will be used depending on the logic selected.</description>
        <inlineHelpText>Custom date used to set the Touchpoint Date for Bizible Attribution. If blank, Campaign Member Created Date or First Responded Date will be used depending on the logic selected.</inlineHelpText>
        <label>Bizible Touchpoint Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Status_Contact__c</fullName>
        <label>Touchpoint Status (Contact)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Status_Date__c</fullName>
        <label>Touchpoint Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Status_Lead__c</fullName>
        <label>Touchpoint Status (Lead)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Status_Opportunity__c</fullName>
        <label>Touchpoint Status (Opportunity)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testste__c</fullName>
        <formula>IF(AND(LEFT(Campaign.Name, 3)= &quot;TSE&quot;,CONTAINS(&quot;Swap&quot;, Campaign.Name), CONTAINS(&quot;VMworld&quot;, Campaign.Name)),&quot;VMWorld- Swap&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testste</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tt_itda_watch__Tech_Target_Import_Timestamp__c</fullName>
        <description>A timestamp provided when Tech Target adds a Campaign Member.</description>
        <inlineHelpText>A timestamp provided when Tech Target adds a Campaign Member.</inlineHelpText>
        <label>Tech Target Import Timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>